# instaminer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  load.py  pyproject.toml  requirements.txt  run.py  save_s3.py
core/: basic_relevance.py  context.py  core.py  emit.py  garbage_collector.py  looper.py  options.py  procedure.py  structures.py
database/: __init__.py  database.py  database_instance.py  new.py  post_operations.py
emitter/: amqp.py  emit.py
entities/: __init__.py  post.py  post_operations.py
service/: instaminer.proto  instaminer.py
settings/: __init__.py  env.py  names.py
