[tool.poetry]
name = "instaminer"
version = "0.1.0"
description = "A research tool for hashtag dynamics in Instagram."
authors = ["Minsky Lab <bregy@minsky.cc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
instaloader = "^4.7.1"
pydantic = "^1.8.1"
peewee = "^3.14.4"
python-dotenv = "^0.17.0"
minio = "^7.0.3"
pika = "^1.2.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
