[tool.pdm]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "autopep8<2.0.0,>=1.5.6",
    "mypy<1.0,>=0.812",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "instaminer"
version = "0.1.0"
description = "A research tool for hashtag dynamics in Instagram."
authors = [{name = "Bregy Malpartida", email = "bregy@minsky.cc"}]
dependencies = [
    "instaloader~=4.7",
    "pydantic~=1.8",
    "peewee~=3.14",
    "python-dotenv~=0.17",
    "minio~=7.0",
    "pika~=1.2",
    "loguru~=0.5",
    "psycopg2-binary~=2.8",
    "asyncpg~=0.23",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""
